# hapi-core

client.rs/: Cargo.toml
client.rs/src/client/: interface.rs  mod.rs  result.rs
client.rs/src/client/entities/: address.rs  asset.rs  case.rs  category.rs  reporter.rs
client.rs/src/client/implementations/: mod.rs
client.rs/src/client/implementations/evm/: cli.rs  conversion.rs  mod.rs  token.rs
client.rs/src/client/implementations/near/: cli.rs  mod.rs
client.rs/src/client/implementations/solana/: cli.rs  mod.rs
client.rs/src/commands/: context.rs
client.rs/tests/: cli-evm.rs  cli-solana.rs
client.rs/tests/evm/: setup.rs
client.rs/tests/solana/: setup.rs
client.ts/: package-lock.json
client.ts/test/: setup.ts
explorer/: Cargo.toml
indexer/: Cargo.toml
indexer/tests/mocks/: evm_mock.rs
